welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value bSimle
  if (aSmile==true && bSimle==true||aSmile==false && bSmile==false){
                      ^